--- a/about.html
+++ b/about.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="styles/style.css">
     <title>About us</title>
 </head>
+<body>
     <div class="banner">
-        <div class="nav">
+        <nav>
             <img src="styles/logo.png" class="logo">
             <ul>
                 <li><a href="index.html">HOMEPAGE</a></li>
@@ -15,7 +16,44 @@
                 <li><a href="application.html">APPLICATION</a></li>
                 <li><a href="about.html">ABOUT US</a></li>
             </ul>
-        </div>
+        </nav>
     </div>
+    <div class="content2">
+        <dl>
+            <dt id="tutor">Tutor: Tristan</dt>
+            <dt>Nguyen Xuan Nang Mai --- s105549980</dt> 
+                <dd>Team captain, working on job-descriptions page</dd>
+            <dt>Le Quang Dinh --- s105543296</dt>  
+                <dd>Team member, working on application form</dd>
+            <dt>Bui Minh Duc --- s105691917 </dt> 
+                <dd>Team member, working on index and about pages</dd>       
+        </dl>
+    </div>
+    <table>
+        <caption>Days and session times</caption>
+            <tr>
+                <td></th>
+                <td>Day</td>
+                <td>Time</td>
+            </tr>
+            <tr>
+                <td>COS10026 --- Web Technology Project</td>
+                <td>Monday</td>
+                <td>13:00pm - 17:00pm</td>
+            </tr>
+            <tr>
+                <td>TNE10006 --- Networks and Switching</td>
+                <td>Wednesday</td>
+                <td>13:00pm - 17:00pm</td>
+            </tr>
+            <tr>
+                <td>Vovinam 1 & 2</td>
+                <td></td> <!--add ur vov class time-->
+                <td></td> <!--same as here-->
+            </tr>
+
+    </table> <!--No idea what to do with this-->
+    <img src="" alt=""> <!--group photo-->
+    <p>Additional info:</p> <!--add-->
 </body>
 </html>
