--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="banner">
-        <div class="nav">
+        <nav>
             <img src="styles/logo.png" class="logo">
             <ul>
                 <li><a href="#">HOMEPAGE</a></li>
@@ -16,12 +16,22 @@
                 <li><a href="#">APPLICATION</a></li>
                 <li><a href="#">ABOUT US</a></li>
             </ul>
-        </div>
+        </nav>
     </div>
-    <div class="content">
+    <section class="content">
         <h1 class="anim">Welcome to <br>TechCareers Inc.</h1>
         <p class="anim">Creating technology and developing people. <br>From Vietnam to the world</p>
         <p class="anim">Join us and be part of the future!</p>
-    </div>
+    </section>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
