--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <nav>
             <img src="styles/logo.png" class="logo">
             <ul>
-                <li><a href="#">HOMEPAGE</a></li>
-                <li><a href="#">JOB DESCRIPTIONS</a></li>
-                <li><a href="#">APPLICATION</a></li>
-                <li><a href="#">ABOUT US</a></li>
+                <li><a href="index.html">HOMEPAGE</a></li>
+                <li><a href="job-descriptions.html">JOB DESCRIPTIONS</a></li>
+                <li><a href="application.html">APPLICATION</a></li>
+                <li><a href="about.html">ABOUT US</a></li>
             </ul>
         </nav>
     </div>
